# dpt2

./: INSTALL.md  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
results/: 1_PrimerAnalyse_local.xlsx  1_PrimerAnalyse_local_primerblast.csv
scripts/: benchmark_check.py  benchmark_lmu.py  design_and_score_primers.py  select_and_design_probes.py
scripts/mpx_dpcr/: blast_check.py  design.py  evaluate.py  fetch.py  probe_design.py
src/dpt2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mpx_dpcr/: cli.py
